--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ var _hmt = _hmt || [];
 		  <a href="https://ece.northeastern.edu/">Department of ECE</a>,
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>.
-		  My research interests mainly include Large Language Models, Graph Machine Learning, Generative AI, Multimodal Learning, and AI for Science. <br>
+		  My currect research interests primarily focuse on large lanugage models, vision-language models, and fundation models. <br>
 
-		  <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font>
+		  <!-- <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font> -->
 	  </span> <br>
 	  <span></span>
     </div>
@@ -82,119 +82,118 @@ var _hmt = _hmt || [];
 	<tbody>
 
 		<tr>
+			<td width="206">
+				<img src="img/NIPS23.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
 			<td><strong><a href="" target="_blank">Latent Graph Inference with Limited Supervision.</a></strong>
 				[<a href="https://arxiv.org/pdf/2310.04314.pdf">PDF</a>][<a href="https://jianglin954.github.io/LGI-LS/">Project Page</a>][<a href="https://github.com/Jianglin954/LGI-LS">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yi Xu, Huan Wang, Yue Bai, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
+		</tr>
 
-		<!--<tr>
+		<tr>
+			<td width="206">
+				<img src="img/TCYB231.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
 			<td><strong><a href="https://ieeexplore.ieee.org/document/10015100" target="_blank">Asymmetric Transfer Hashing with Adaptive Bipartite Graph Learning.</a></strong>
 				[<a href="https://ieeexplore.ieee.org/document/10015100">PDF</a>]
 				[<a href="https://github.com/Jianglin954/ATH-Codes">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Jie Zhou, Yudong Chen, Witold Pedrycz, Kwok-Wai Hung.</p>
-			   <p style="margin-top: -11px"><i>IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2023.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>-->
-
-		<!--<tr>
-
-			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650" target="_blank">Generalized Embedding Regression: A Framework for Supervised Feature Extraction.</a></strong>
-				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650">PDF</a>]
-				[<a href="https://github.com/Jianglin954/TNNLS-2022-GER-Codes">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>,  Zhihui Lai, Hailing Wang, Yudong Chen, Jie Zhou, Linlin Shen.</p>
-			   <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2022.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>-->
+			   <p style="margin-top: -11px"><i>IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2022.
+		</tr>
 
 
-		<!--<tr>-->
-			<!--<td width="206">
-		   <img src="img/INS2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		   </td>-->
-		   <!--<td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub" target="_blank">Deep Asymmetric Hashing with Dual Semantic Regression and Class Structure Quantization.</a></strong>
-		   [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub">PDF</a>]<br>
-		   <p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Mengfan Yan, Jiajun Wen.</p>
-			  <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2022.
-	   <tr></tr>
-	   <tr></tr>
-	   <tr></tr>-->
+		
 
-
-		<!--<tr>
+		<tr>
+			<td width="206">
+				<img src="img/PR2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+				</td>
 			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub" target="_blank">Low-Rank Adaptive Graph Embedding for Unsupervised Feature Extraction.</a></strong>
 				[<a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub">PDF</a>]
 				[<a href="https://github.com/Jianglin954/PR-2021-LRAGE-Codes">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Yudong Chen, Zhihui Lai, Qinghua Hu.</p>
 			   <p style="margin-top: -11px"><i>Pattern Recognition (<strong>PR</strong>), 2021.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>-->
+		</tr>
 
-		<!--<tr>-->
-			<!--<td width="206">
+
+
+		<tr>
+			<td width="206">
+				<img src="img/TNNLS20224.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+				</td>
+			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650" target="_blank">Generalized Embedding Regression: A Framework for Supervised Feature Extraction.</a></strong>
+				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650">PDF</a>]
+				[<a href="https://github.com/Jianglin954/TNNLS-2022-GER-Codes">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>,  Zhihui Lai, Hailing Wang, Yudong Chen, Jie Zhou, Linlin Shen.</p>
+			   <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2020.
+		</tr>
+
+
+		<!--<tr>
+			<td width="206">
+		   <img src="img/INS2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		   </td>
+		   <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub" target="_blank">Deep Asymmetric Hashing with Dual Semantic Regression and Class Structure Quantization.</a></strong>
+		   [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub">PDF</a>]<br>
+		   <p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Mengfan Yan, Jiajun Wen.</p>
+			  <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2022.
+	   </tr>-->
+
+
+		<!--<tr>
+			<td width="206">
 			<img src="img/INS2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>-->
-			<!--<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub" target="_blank">Target Redirected Regression with Dynamic Neighborhood Structure.</a></strong>
+			</td>
+			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub" target="_blank">Target Redirected Regression with Dynamic Neighborhood Structure.</a></strong>
 				[<a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub">PDF</a>]
 				[<a href="https://github.com/Jianglin954/INS-2021-RLRRP-Codes">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Jingxu Lin, Zhihui Lai, Hailing Wang, Jie Zhou.</p>
 			   <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2021.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>-->
+		</tr>-->
 
 
-		<!--<tr>-->
-			<!--<td width="206">
+		<!--<tr>
+			<td width="206">
 			<img src="img/ICPR2020.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>-->
-			<!--<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9412142" target="_blank">Label Self-Adaption Hashing for Image Retrieval.</a></strong>
+			</td>
+			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9412142" target="_blank">Label Self-Adaption Hashing for Image Retrieval.</a></strong>
 				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9412142">PDF</a>]
 				[<a href="https://github.com/Jianglin954/ICPR-2020-LSAH-Codes">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Zhihui Lai, Jingxu Lin, Qinghong Lin, Jie Zhou.</p>
 			   <p style="margin-top: -11px"><i>International Conference on Pattern Recognition (<strong>ICPR</strong>), 2020.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>-->
+		</tr>-->
 					
 		<tr>
-			 <!-- <td width="206">
+			<td width="206">
 			<img src="img/IJCAI2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td> -->
+			</td>
 			<td><strong><a href="https://doi.org/10.24963/ijcai.2022/201" target="_blank">Uncertainty-Guided Pixel Contrastive Learning for Semi-Supervised Medical Image Segmentation.</a></strong>
 				[<a href="https://doi.org/10.24963/ijcai.2022/201">PDF</a>][<a href="https://github.com/taovv/UGPCL">Code</a>]<br>
 			<p >Tao Wang, <strong>Jianglin Lu</strong>, Zhihui Lai, Heng Kong, Jiajun Wen. </p>
 			   <p style="margin-top: -11px"><i>International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>), 2022.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
+		</tr>
 
 		<tr>
-			<!--<td width="206">
+			<td width="206">
 			<img src="img/ACMMM2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>-->
+			</td>
 			<td><strong><a href="https://dl.acm.org/doi/10.1145/3474085.3475346" target="_blank">Local Graph Convolutional Networks for Cross-Modal Hashing.</a></strong>
 				[<a href="https://dl.acm.org/doi/10.1145/3474085.3475346">PDF</a>][<a href="https://github.com/chenyd7/LGCNH">Code</a> ]<br>
 			<p >Yudong Chen, Sen Wang, <strong>Jianglin Lu</strong>, Zhi Chen, Zheng Zhang, Zi Huang.</p>
 			   <p style="margin-top: -11px"><i>ACM International Conference on Multimedia (<strong>ACM MM</strong>), 2021.
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
+		</tr>
 
 
-		<tr>
-			 <!--<td width="206">
+		<!--<tr>
+			 <td width="206">
 			<img src="img/TOMM2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>-->
-			<!--<td><strong><a href="https://dl.acm.org/doi/10.1145/3477538" target="_blank">Deep Semantic and Attentive Network for Unsupervised Video Summarization.</a></strong>
+			</td>
+			<td><strong><a href="https://dl.acm.org/doi/10.1145/3477538" target="_blank">Deep Semantic and Attentive Network for Unsupervised Video Summarization.</a></strong>
 				[<a href="https://dl.acm.org/doi/10.1145/3477538">PDF</a>]<br>
 			<p >Shenghua Zhong, Jingxu Lin, <strong>Jianglin Lu</strong>, Ahmed Fares, Tongwei Ren.</p>
-			   <p style="margin-top: -11px"><i>ACM Transactions on Multimedia Computing, Communications, and Applications (<strong>TOMM</strong>), 2022. -->
+			   <p style="margin-top: -11px"><i>ACM Transactions on Multimedia Computing, Communications, and Applications (<strong>TOMM</strong>), 2022. 
+		</tr>-->
 
 
 	</tbody>
@@ -202,30 +201,43 @@ var _hmt = _hmt || [];
 
 
 
-
-     <h2>Useful Links </h2>
+	<h2>Invited Talks </h2>
 
 	<table id="tbPublications" width="100%">
 	<tbody>		   
 		<tr>
-			<!--<td width="206">
-		<img src="img/TOMM2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>-->
-		<td>Awesome Papers in Machine Learning, Computer Vision, Pattern Recognition, and Data Mining.
-			[<a href="https://github.com/Jianglin954/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM">Link</a>]<br>
+		<td>Feb. 2024, Introduction to Latent Graph Inference [<a href="https://jianglin954.github.io/files/ACLab_Talk.pdf">Slides</a>], invited by <a href="https://ai.northeastern.edu/our-people/sarah-ostadabbas">Prof. Sarah Ostadabbas</a>  <a href="https://web.northeastern.edu/ostadabbas/team-listing/">@ACLab</a><br>
 		<tr></tr>
 		<tr></tr>
 		<tr></tr>
 
+
+	</tbody>
+	</table>
+
+
+     <h2>Useful Links </h2>
+
+	<table id="tbPublications" width="100%">
+	<tbody>		 
+
 		<tr>
-			<!--<td width="206">
-		   <img src="img/TOMM2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		   </td>-->
-		   <td>Awesome Large Language Models On Graphs.
-			[<a href="https://github.com/Jianglin954/Awesome-Large-Language-Models-On-Graphs">Link</a>]<br>
-	   <tr></tr>
-	   <tr></tr>
-	   <tr></tr>
+		<td>Awesome Papers in Machine Learning, Computer Vision, Pattern Recognition, and Data Mining.
+			[<a href="https://github.com/Jianglin954/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM">Link</a>]<br></td>
+		</tr>
+
+	   <tr>
+		<td> Introduction to Vision Language Models [<a href="https://jianglin954.github.io/files/Visual_Language_Models.pdf">Notes</a>]<br></td>
+	   </tr>
+
+	   <tr>
+		<td> Introduction to Domain Adaptation [<a href="https://jianglin954.github.io/files/Domain_Adaptation.pdf">Notes</a>]<br></td>
+	   </tr>
+
+	   <tr>
+		<td> Introduction to Graph Neural Networks [<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Notes</a>]<br></td>
+	   </tr>
+	   
 
 	</tbody>
 	</table>
