--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ var _hmt = _hmt || [];
 		  <a href="https://ece.northeastern.edu/">Department of ECE</a>,
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>.
-		  My currect research interests primarily focuse on large lanugage models, vision-language models, and fundation models. <br>
-
+		  My currect research interests primarily focuse on large lanugage models, vision-language models, and fundation models.
 		  <!-- <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font> -->
 	  </span> <br>
 	  <span></span>
@@ -90,6 +89,12 @@ var _hmt = _hmt || [];
 			<p ><strong>Jianglin Lu</strong>, Yi Xu, Huan Wang, Yue Bai, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+	
 
 		<tr>
 			<td width="206">
@@ -101,6 +106,12 @@ var _hmt = _hmt || [];
 			<p ><strong>Jianglin Lu</strong>, Jie Zhou, Yudong Chen, Witold Pedrycz, Kwok-Wai Hung.</p>
 			   <p style="margin-top: -11px"><i>IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2022.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+
 
 
 		
@@ -115,6 +126,11 @@ var _hmt = _hmt || [];
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Yudong Chen, Zhihui Lai, Qinghua Hu.</p>
 			   <p style="margin-top: -11px"><i>Pattern Recognition (<strong>PR</strong>), 2021.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
 
 
 
@@ -128,6 +144,11 @@ var _hmt = _hmt || [];
 			<p ><strong>Jianglin Lu</strong>,  Zhihui Lai, Hailing Wang, Yudong Chen, Jie Zhou, Linlin Shen.</p>
 			   <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2020.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
 
 
 		<!--<tr>
@@ -173,6 +194,11 @@ var _hmt = _hmt || [];
 			<p >Tao Wang, <strong>Jianglin Lu</strong>, Zhihui Lai, Heng Kong, Jiajun Wen. </p>
 			   <p style="margin-top: -11px"><i>International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>), 2022.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
 
 		<tr>
 			<td width="206">
@@ -183,6 +209,11 @@ var _hmt = _hmt || [];
 			<p >Yudong Chen, Sen Wang, <strong>Jianglin Lu</strong>, Zhi Chen, Zheng Zhang, Zi Huang.</p>
 			   <p style="margin-top: -11px"><i>ACM International Conference on Multimedia (<strong>ACM MM</strong>), 2021.
 		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
 
 
 		<!--<tr>
@@ -206,12 +237,8 @@ var _hmt = _hmt || [];
 	<table id="tbPublications" width="100%">
 	<tbody>		   
 		<tr>
-		<td>Feb. 2024, Introduction to Latent Graph Inference [<a href="https://jianglin954.github.io/files/ACLab_Talk.pdf">Slides</a>], invited by <a href="https://ai.northeastern.edu/our-people/sarah-ostadabbas">Prof. Sarah Ostadabbas</a>  <a href="https://web.northeastern.edu/ostadabbas/team-listing/">@ACLab</a><br>
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
-
-
+		<td>Feb. 2024, Introduction to Latent Graph Inference [<a href="https://jianglin954.github.io/files/ACLab_Talk.pdf">Slides</a>], invited by <a href="https://ai.northeastern.edu/our-people/sarah-ostadabbas">Prof. Sarah Ostadabbas</a>  <a href="https://web.northeastern.edu/ostadabbas/team-listing/">@ACLab.</a><br>
+		</tr>
 	</tbody>
 	</table>
 
@@ -235,10 +262,8 @@ var _hmt = _hmt || [];
 	   </tr>
 
 	   <tr>
-		<td> Introduction to Graph Neural Networks [<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Notes</a>]<br></td>
+		<td> Introduction to Graph Neural Networks [<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Notes</a>]</td>
 	   </tr>
-	   
-
 	</tbody>
 	</table>
 
