--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ var _hmt = _hmt || [];
 		  <a href="https://ece.northeastern.edu/">Department of ECE</a>,
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>.
-		  My currect research interests primarily focuse on large lanugage models, vision-language models, and fundation models.
+		  My current research interests primarily focus on large language models, vision-language models, and foundation models. <br>
+		  
 		  <!-- <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font> -->
 	  </span> <br>
 	  <span></span>
