--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ var _hmt = _hmt || [];
 	<table id="tbPublications" width="100%">
 	<tbody>		   
 		<tr>
-		<td>Feb. 2024, Introduction to Latent Graph Inference [<a href="https://jianglin954.github.io/files/ACLab_Talk.pdf">Slides</a>], invited by <a href="https://ai.northeastern.edu/our-people/sarah-ostadabbas">Prof. Sarah Ostadabbas</a>  <a href="https://web.northeastern.edu/ostadabbas/team-listing/">@ACLab.</a><br>
+		<td>Feb. 2024, Latent Graph Inference from Shallow Methods to GNNs [<a href="https://jianglin954.github.io/files/ACLab_Talk.pdf">Slides</a>], invited by <a href="https://ai.northeastern.edu/our-people/sarah-ostadabbas">Prof. Sarah Ostadabbas</a>  <a href="https://web.northeastern.edu/ostadabbas/team-listing/">@ACLab.</a><br>
 		</tr>
 	</tbody>
 	</table>
