--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ var _hmt = _hmt || [];
 	<table id="tbPublications" width="100%">
 	<tbody>		   
 		<tr>
-		<td>Conference Reviewer: ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, AISTATS, MM.
+		<td>Conference Reviewer: ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, KDD, MM, AISTATS, 
 		</tr>
 
 		<tr>
