--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>. 
 		  I have interned at <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
-		  My current research interests primarily focus on <strong>large language models, vision-language models, graph neural networks, and agents.</strong>.
+		  My current research interests primarily focus on <strong>large language models, vision-language models, graph neural networks, and agents</strong>.
 		  <!-- <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font> -->
 	  </span> 
 	  <span></span>
