--- a/index.html
+++ b/index.html
@@ -166,15 +166,20 @@ var _hmt = _hmt || [];
 		<tr></tr>	
 		<tr></tr>	
 
-		<!--<tr>
-			<td width="206">
+		<tr>
+		   <!--<td width="206">
 		   <img src="img/INS2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		   </td>
+		   -->
 		   <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub" target="_blank">Deep Asymmetric Hashing with Dual Semantic Regression and Class Structure Quantization.</a></strong>
 		   [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub">PDF</a>]<br>
 		   <p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Mengfan Yan, Jiajun Wen.</p>
 			  <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2022.
-	   </tr>-->
+	   	</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>
 
 
 		<tr>
