--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ var _hmt = _hmt || [];
 <div style="margin-top: 10px"></div>
      <h2>Selected Publications </h2>
 
+	 <h3>Conference</h3>
+
 	<table id="tbPublications" width="100%">
 	<tbody>
 
@@ -113,99 +115,20 @@ var _hmt = _hmt || [];
 		<tr></tr>	
 		<tr></tr>		
 
-
 		<tr>
-			<!--
-			<td width="206">
-				<img src="img/TCYB231.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td> 		
-			-->
-			<td><strong><a href="https://ieeexplore.ieee.org/document/10015100" target="_blank">Asymmetric Transfer Hashing with Adaptive Bipartite Graph Learning.</a></strong>
-				[<a href="https://ieeexplore.ieee.org/document/10015100">PDF</a>]
-				[<a href="https://github.com/Jianglin954/ATH-Codes">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>, Jie Zhou, Yudong Chen, Witold Pedrycz, Kwok-Wai Hung.</p>
-			   <p style="margin-top: -11px"><i>IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2023.
-		</tr>
-		<tr></tr>
-		<tr></tr>	
-		<tr></tr>	
-		<tr></tr>	
-
-		<tr>
-			<!--
-			<td width="206">
-				<img src="img/TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-				</td>
-			-->
-			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650" target="_blank">Generalized Embedding Regression: A Framework for Supervised Feature Extraction.</a></strong>
-				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650">PDF</a>]
-				[<a href="https://github.com/Jianglin954/TNNLS-2022-GER-Codes">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>,  Zhihui Lai, Hailing Wang, Yudong Chen, Jie Zhou, Linlin Shen.</p>
-			   <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2022.
-		</tr>
-		<tr></tr>
-		<tr></tr>	
-		<tr></tr>	
-		<tr></tr>	
-
-
-		<tr>
-			<!--
-			<td width="206">
-				<img src="img/PR2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>
-			-->
-			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub" target="_blank">Low-Rank Adaptive Graph Embedding for Unsupervised Feature Extraction.</a></strong>
-				[<a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub">PDF</a>]
-				[<a href="https://github.com/Jianglin954/PR-2021-LRAGE-Codes">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Yudong Chen, Zhihui Lai, Qinghua Hu.</p>
-			   <p style="margin-top: -11px"><i>Pattern Recognition (<strong>PR</strong>), 2021.
-		</tr>
-		<tr></tr>
-		<tr></tr>	
-		<tr></tr>	
-		<tr></tr>	
-
-		<tr>
-		   <!--<td width="206">
-		   <img src="img/INS2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		   </td>
-		   -->
-		   <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub" target="_blank">Deep Asymmetric Hashing with Dual Semantic Regression and Class Structure Quantization.</a></strong>
-		   [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub">PDF</a>]<br>
-		   <p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Mengfan Yan, Jiajun Wen.</p>
-			  <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2022.
-	   	</tr>
-		<tr></tr>
-		<tr></tr>	
-		<tr></tr>	
-		<tr></tr>
-
-
-		<tr>
-			<!--
-			<td width="206">
-			<img src="img/INS2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>
-			-->
-			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub" target="_blank">Target Redirected Regression with Dynamic Neighborhood Structure.</a></strong>
-				[<a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub">PDF</a>]
-				[<a href="https://github.com/Jianglin954/INS-2021-RLRRP-Codes">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>, Jingxu Lin, Zhihui Lai, Hailing Wang, Jie Zhou.</p>
-			   <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2021.
-		</tr>
-
-
-		<!--<tr>
-			<td width="206">
+			<!--<td width="206">
 			<img src="img/ICPR2020.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-			</td>
+			</td>-->
 			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9412142" target="_blank">Label Self-Adaption Hashing for Image Retrieval.</a></strong>
 				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9412142">PDF</a>]
 				[<a href="https://github.com/Jianglin954/ICPR-2020-LSAH-Codes">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Zhihui Lai, Jingxu Lin, Qinghong Lin, Jie Zhou.</p>
 			   <p style="margin-top: -11px"><i>International Conference on Pattern Recognition (<strong>ICPR</strong>), 2020.
-		</tr>-->
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
 					
 		<tr>
 			<!--
@@ -234,6 +157,99 @@ var _hmt = _hmt || [];
 			<p >Yudong Chen, Sen Wang, <strong>Jianglin Lu</strong>, Zhi Chen, Zheng Zhang, Zi Huang.</p>
 			   <p style="margin-top: -11px"><i>ACM International Conference on Multimedia (<strong>ACM MM</strong>), 2021.
 		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+	</tbody>
+	</table>
+
+
+
+	<h3>Journal</h3>
+
+	<table id="tbPublications" width="100%">
+	<tbody>
+
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/TCYB231.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td> 		
+			-->
+			<td><strong><a href="https://ieeexplore.ieee.org/document/10015100" target="_blank">Asymmetric Transfer Hashing with Adaptive Bipartite Graph Learning.</a></strong>
+				[<a href="https://ieeexplore.ieee.org/document/10015100">PDF</a>]
+				[<a href="https://github.com/Jianglin954/ATH-Codes">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Jie Zhou, Yudong Chen, Witold Pedrycz, Kwok-Wai Hung.</p>
+			   <p style="margin-top: -11px"><i>IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2024.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+				</td>
+			-->
+			<td><strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650" target="_blank">Generalized Embedding Regression: A Framework for Supervised Feature Extraction.</a></strong>
+				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9248650">PDF</a>]
+				[<a href="https://github.com/Jianglin954/TNNLS-2022-GER-Codes">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>,  Zhihui Lai, Hailing Wang, Yudong Chen, Jie Zhou, Linlin Shen.</p>
+			   <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2022.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<!--<td width="206">
+			<img src="img/INS2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub" target="_blank">Deep Asymmetric Hashing with Dual Semantic Regression and Class Structure Quantization.</a></strong>
+			[<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025521013335?via%3Dihub">PDF</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Mengfan Yan, Jiajun Wen.</p>
+			   <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2022.
+			</tr>
+		 <tr></tr>
+		 <tr></tr>	
+		 <tr></tr>	
+		 <tr></tr>
+ 
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/PR2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub" target="_blank">Low-Rank Adaptive Graph Embedding for Unsupervised Feature Extraction.</a></strong>
+				[<a href="https://www.sciencedirect.com/science/article/pii/S0031320320305616?via%3Dihub">PDF</a>]
+				[<a href="https://github.com/Jianglin954/PR-2021-LRAGE-Codes">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Jie Zhou, Yudong Chen, Zhihui Lai, Qinghua Hu.</p>
+			   <p style="margin-top: -11px"><i>Pattern Recognition (<strong>PR</strong>), 2021.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<!--
+			<td width="206">
+			<img src="img/INS2021.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub" target="_blank">Target Redirected Regression with Dynamic Neighborhood Structure.</a></strong>
+				[<a href="https://www.sciencedirect.com/science/article/pii/S0020025520308288?via%3Dihub">PDF</a>]
+				[<a href="https://github.com/Jianglin954/INS-2021-RLRRP-Codes">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Jingxu Lin, Zhihui Lai, Hailing Wang, Jie Zhou.</p>
+			   <p style="margin-top: -11px"><i>Information Sciences (<strong>INS</strong>), 2021.
+		</tr>
+
 	</tbody>
 	</table>
 
