--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ var _hmt = _hmt || [];
 
 		<tr>
 		<td>Awesome Papers in Machine Learning, Computer Vision, Pattern Recognition, and Data Mining
-			[<a href="https://jianglin954.github.io/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM/">Link</a>]<br></td>
+			[<a href="https://github.com/Jianglin954/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM">Link</a>]<br></td>
 		</tr>
 
 	   <tr>
@@ -325,3 +325,4 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
