--- a/index.html
+++ b/index.html
@@ -83,6 +83,73 @@ var _hmt = _hmt || [];
 	<table id="tbPublications" width="100%">
 	<tbody>
 
+
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis.</a></strong>
+				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
+				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+			<p >Hailing Wang, <strong>Jianglin Lu</strong>, Yitian Zhang, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV Highlight</strong>), 2025.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="" target="_blank">Representation Potentials of Foundation Models for Multimodal Alignment: A Survey.</a></strong>
+				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Yi Xu, Yizhou Wang, Kuo Yang, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>), 2025.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		
+		<tr>
+			<!--
+			<td width="206">
+				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+			</td>
+			-->
+			<td><strong><a href="" target="_blank">Unequal Scientific Recognition in the Age of LLMs.</a></strong>
+				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+			<p >Yixuan Liu, Abel Elekes, <strong>Jianglin Lu</strong>, Rodrigo Dorantes-Gilardi, Albert-Laszlo Barabasi. </p>
+			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP Findings</strong>), 2025.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+	
 		<tr>
 			<!--
 			<td width="206">
@@ -108,7 +175,7 @@ var _hmt = _hmt || [];
 			<td><strong><a href="" target="_blank">Latent Graph Inference with Limited Supervision.</a></strong>
 				[<a href="https://arxiv.org/pdf/2310.04314.pdf">PDF</a>][<a href="https://jianglin954.github.io/LGI-LS/">Project Page</a>][<a href="https://github.com/Jianglin954/LGI-LS">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yi Xu, Huan Wang, Yue Bai, Yun Fu. </p>
-			   <p style="margin-top: -11px"><i>Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023.
+			   <p style="margin-top: -11px"><i>The Thirty-seventh Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023.
 		</tr>
 		<tr></tr>
 		<tr></tr>	
@@ -325,4 +392,5 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
