--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ var _hmt = _hmt || [];
 		  <a href="https://ece.northeastern.edu/">Department of ECE</a>,
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>. 
-		  I have interned at <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
-		  My current research interests primarily focus on <strong>large language models, vision-language models, graph neural networks, and agents</strong>.
-		  <!-- <br><font color="#FF0000">I am looking for a summer internship in 2024. Please feel free to contact me. </font> -->
+		  I have interned at <a href="https://aws.amazon.com/">Amazon</a>, <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
+		  My current research interests primarily focus on <strong>large language models, vision-language models, multimodal alignment, reinforcement learning, and agents</strong>.
+		  <br><font color="#FF0000">I am looking for a summer internship in 2025. Please feel free to contact me. </font>
 	  </span> 
 	  <span></span>
     </div>
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
 			<td><strong><a href="" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
 				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
 			<p >Hailing Wang, <strong>Jianglin Lu</strong>, Yitian Zhang, Yun Fu. </p>
-			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV Highlight</strong>), 2025.
+			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV <font color="#FF0000">Highlight</font></strong>), 2025.
 		</tr>
 		<tr></tr>
 		<tr></tr>	
@@ -159,7 +159,7 @@ var _hmt = _hmt || [];
 			<td><strong><a href="" target="_blank">Scale-Free Graph-Language Models.</a></strong>
 				[<a href="https://openreview.net/forum?id=nFcgay1Yo9">PDF</a>][<a href="https://github.com/Jianglin954/SFGL">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yixuan Liu, Yitian Zhang, Yun Fu. </p>
-			   <p style="margin-top: -11px"><i>International Conference on Learning Representations (<strong>ICLR</strong>), 2025.
+			   <p style="margin-top: -11px"><i>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2025.
 		</tr>
 		<tr></tr>
 		<tr></tr>	
@@ -392,5 +392,6 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
