--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var _hmt = _hmt || [];
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>. 
 		  I have interned at <a href="https://aws.amazon.com/">Amazon</a>, <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
 		  My current research interests primarily focus on <strong>large language models, vision-language models, multimodal alignment, reinforcement learning, and agents</strong>.
-		  <br><font color="#FF0000">I am looking for a summer internship in 2025. Please feel free to contact me. </font>
+		  <br><font color="#FF0000">I am looking for a part/full time internship position in Spring/Summer 2026. Please feel free to contact me if you have any openings! </font>
 	  </span> 
 	  <span></span>
     </div>
@@ -392,6 +392,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
