--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Representation Potentials of Foundation Models for Multimodal Alignment: A Survey.</a></strong>
-				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://arxiv.org/pdf/2510.05184">PDF</a>][<a href="https://github.com/Jianglin954/Representation-Alignment-Survey">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Yi Xu, Yizhou Wang, Kuo Yang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>), 2025.
 		</tr>
@@ -406,6 +406,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
