--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ var _hmt = _hmt || [];
 	</table>
 
 
-
+	<!--
 	<h2>Invited Talks </h2>
 
 	<table id="tbPublications" width="100%">
@@ -341,18 +341,18 @@ var _hmt = _hmt || [];
 		</tr>
 	</tbody>
 	</table>
-
+	-->
 	
 	<h2>Professional Services </h2>
 
 	<table id="tbPublications" width="100%">
 	<tbody>		   
 		<tr>
-		<td>Conference Reviewer: ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, KDD, MM, AISTATS, 
+		<td>Conference Reviewer: ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, ACL, EMNLP, AAAI, MM, KDD, AISTATS
 		</tr>
 
 		<tr>
-		<td>Journal Reviewer: TPAMI, TIP, TKDE, TNNLS, TKDD, PR.
+		<td>Journal Reviewer: TPAMI, TIP, TKDE, TNNLS, TKDD, PR
 		</tr>
 	</tbody>
 	</table>
@@ -406,6 +406,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
