Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Scale-Free Graph-Language Models.</a></strong>
-				[<a href="https://openreview.net/forum?id=nFcgay1Yo9">PDF</a>][<a href="https://github.com/Jianglin954/SFGL">Code</a>]<br>
+				[<a href="https://openreview.net/pdf?id=nFcgay1Yo9">PDF</a>][<a href="https://github.com/Jianglin954/SFGL">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yixuan Liu, Yitian Zhang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2025.
 		</tr>
@@ -406,6 +406,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
