--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis.</a></strong>
-				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://openreview.net/pdf/7a234a154428f618d6232f1a153278475a2e3b00.pdf">PDF</a>][<a href="">Code</a>][coming soon]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
 		</tr>
@@ -107,7 +107,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
-				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Wang_Outlier-Aware_Post-Training_Quantization_for_Image_Super-Resolution_ICCV_2025_paper.pdf">PDF</a>][<a href="">Code</a>][coming soon]<br>
 			<p >Hailing Wang, <strong>Jianglin Lu</strong>, Yitian Zhang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV <font color="#FF0000">Highlight</font></strong>), 2025.
 		</tr>
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Representation Potentials of Foundation Models for Multimodal Alignment: A Survey.</a></strong>
-				[<a href="https://arxiv.org/pdf/2510.05184">PDF</a>][<a href="https://github.com/Jianglin954/Representation-Alignment-Survey">Code</a>]<br>
+				[<a href="https://aclanthology.org/2025.emnlp-main.843.pdf">PDF</a>][<a href="https://github.com/Jianglin954/Representation-Alignment-Survey">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Yi Xu, Yizhou Wang, Kuo Yang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>), 2025.
 		</tr>
@@ -140,7 +140,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Unequal Scientific Recognition in the Age of LLMs.</a></strong>
-				[<a href="">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://aclanthology.org/2025.findings-emnlp.1279.pdf">PDF</a>]<br>
 			<p >Yixuan Liu, Abel Elekes, <strong>Jianglin Lu</strong>, Rodrigo Dorantes-Gilardi, Albert-Laszlo Barabasi. </p>
 			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP Findings</strong>), 2025.
 		</tr>
@@ -406,6 +406,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
