--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis.</a></strong>
-				[<a href="https://openreview.net/pdf/7a234a154428f618d6232f1a153278475a2e3b00.pdf">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://openreview.net/pdf/7a234a154428f618d6232f1a153278475a2e3b00.pdf">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
 		</tr>
@@ -107,7 +107,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
-				[<a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Wang_Outlier-Aware_Post-Training_Quantization_for_Image_Super-Resolution_ICCV_2025_paper.pdf">PDF</a>][<a href="">Code</a>][coming soon]<br>
+				[<a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Wang_Outlier-Aware_Post-Training_Quantization_for_Image_Super-Resolution_ICCV_2025_paper.pdf">PDF</a>][<a href="">Code</a>]<br>
 			<p >Hailing Wang, <strong>Jianglin Lu</strong>, Yitian Zhang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV <font color="#FF0000">Highlight</font></strong>), 2025.
 		</tr>
@@ -406,6 +406,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
