--- a/index.html
+++ b/index.html
@@ -78,6 +78,26 @@ var _hmt = _hmt || [];
 <div style="margin-top: 10px"></div>
      <h2>Selected Publications </h2>
 
+	 	 <h3>Preprint</h3>
+
+	<table id="tbPublications" width="100%">
+	<tbody>
+
+
+		<tr>
+			<td><strong><a href="" target="_blank">SimpleCall: A Lightweight Image Restoration Agent in Label-Free Environments with MLLM Perceptual Feedback.</a></strong>
+				[<a href="https://arxiv.org/pdf/2512.18599">PDF</a>][<a href="">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Yuanwei Wu, Ziyi Zhao, Hongcheng Wang, Felix Jimenez, Abrar Majeedi, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>arXiv:2512.18599, 2025.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>
+	</tbody>
+	</table>
+ 	
+	 
 	 <h3>Conference</h3>
 
 	<table id="tbPublications" width="100%">
@@ -406,6 +426,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
