--- a/index.html
+++ b/index.html
@@ -82,14 +82,24 @@ var _hmt = _hmt || [];
 
 	<table id="tbPublications" width="100%">
 	<tbody>
-
-
 		<tr>
 			<td><strong><a href="" target="_blank">SimpleCall: A Lightweight Image Restoration Agent in Label-Free Environments with MLLM Perceptual Feedback.</a></strong>
 				[<a href="https://arxiv.org/pdf/2512.18599">PDF</a>][<a href="">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yuanwei Wu, Ziyi Zhao, Hongcheng Wang, Felix Jimenez, Abrar Majeedi, Yun Fu. </p>
-			   <p style="margin-top: -11px"><i>arXiv:2512.18599, 2025.
+			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2512.18599, 2025.
 		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+
+		<tr>
+			<td><strong><a href="" target="_blank">Trajectory prediction meets large language models: A survey.</a></strong>
+				[<a href="https://arxiv.org/abs/2506.03408">PDF</a>][<a href="https://github.com/colorfulfuture/Awesome-Trajectory-Motion-Prediction-Papers">Code</a>]<br>
+			<p >Yi Xu, Ruining Yang, Yitian Zhang, <strong>Jianglin Lu</strong>, Mingyuan Zhang, Yizhou Wang, Lili Su, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2506.03408, 2025.
+		</tr>
+			
 	</tbody>
 	</table>
  	
@@ -98,8 +108,6 @@ var _hmt = _hmt || [];
 
 	<table id="tbPublications" width="100%">
 	<tbody>
-
-
 		<tr>
 			<!--
 			<td width="206">
@@ -422,6 +430,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
