--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
 		<tr></tr>	
 
 		<tr>
-			<td><strong><a href="" target="_blank">Trajectory prediction meets large language models: A survey.</a></strong>
+			<td><strong><a href="" target="_blank">Trajectory Prediction Meets Large Language Models: A Survey.</a></strong>
 				[<a href="https://arxiv.org/abs/2506.03408">PDF</a>][<a href="https://github.com/colorfulfuture/Awesome-Trajectory-Motion-Prediction-Papers">Code</a>]<br>
 			<p >Yi Xu, Ruining Yang, Yitian Zhang, <strong>Jianglin Lu</strong>, Mingyuan Zhang, Yizhou Wang, Lili Su, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2506.03408, 2025.
@@ -430,6 +430,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
