--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
 		  <a href="https://www.northeastern.edu/">Northeastern University (NEU)</a>,
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>. 
 		  I have interned at <a href="https://aws.amazon.com/">Amazon</a>, <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
-		  My current research interests primarily focus on <strong>Generative AI, Multimodal LLMs, Vision-Language-Action models, Reinforcement Learning, and AI Agents</strong>.
+		  My current research interests primarily focus on <strong>generative AI, multimodal LLMs, vision-language-action models, reinforcement learning, and AI agents</strong>.
 		  <br><font color="#FF0000">I am looking for a full-time internship position in Summer 2026. Please feel free to contact me if you have any openings! </font>
 	  </span> 
 	  <span></span>
@@ -430,6 +430,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
