--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis.</a></strong>
-				[<a href="https://openreview.net/pdf/7a234a154428f618d6232f1a153278475a2e3b00.pdf">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
+				[<a href="https://openreview.net/pdf?id=D2NR5Zq6PG">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
 		</tr>
@@ -430,6 +430,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
