--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var _hmt = _hmt || [];
 		  under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/">Prof. Yun Raymond Fu</a>. 
 		  I have interned at <a href="https://aws.amazon.com/">Amazon</a>, <a href="https://research.adobe.com/">Adobe Research</a> and <a href="https://www.tencentmusic.com/en-us/">Tencent Music Entertainment</a>.
 		  My current research interests primarily focus on <strong>generative AI, multimodal LLMs, vision-language-action models, reinforcement learning, and AI agents</strong>.
-		  <br><font color="#FF0000">I am looking for a full-time internship position in Summer 2026. Please feel free to contact me if you have any openings! </font>
+		  <!--<br><font color="#FF0000">I am looking for a full-time internship position in Summer 2026. Please feel free to contact me if you have any openings! </font>-->
 	  </span> 
 	  <span></span>
     </div>
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
 	 
 <div style="margin-top: 10px"></div>
      <h2>Selected Publications </h2>
-	<!--
+	 
 	<h3>Preprint</h3>
 
 	<table id="tbPublications" width="100%">
@@ -102,7 +102,6 @@ var _hmt = _hmt || [];
 			
 	</tbody>
 	</table>
- 	-->
 	 
 	 <h3>Conference</h3>
 
@@ -430,6 +429,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
