--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@ var _hmt = _hmt || [];
 
 	<table id="tbPublications" width="100%">
 	<tbody>
+
+		<tr>
+			<td><strong><a href="" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
+				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="">Code</a>]<br>
+			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
+		</tr>
+		<tr></tr>
+		<tr></tr>	
+		<tr></tr>	
+		<tr></tr>	
+		
 		<tr>
 			<!--
 			<td width="206">
@@ -429,6 +441,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
