--- a/index.html
+++ b/index.html
@@ -404,15 +404,15 @@ var _hmt = _hmt || [];
 		</tr>
 
 	   <tr>
-		<td> Introduction to Vision Language Models [<a href="https://jianglin954.github.io/files/Visual_Language_Models.pdf">Notes</a>]<br></td>
+		<td>[<a href="https://jianglin954.github.io/files/Visual_Language_Models.pdf">Vision Language Models</a>]<br></td>
+	    <td>[<a href="https://jianglin954.github.io/files/Domain_Adaptation.pdf">Domain Adaptation</a>]<br></td>
+		<td>[<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Graph Neural Networks</a>]</td>
+		<td>[<a href="https://jianglin954.github.io/files/Learning_with_Noisy_Labels.pdf">Learning_with_Noisy_Labels</a>]</td>
 	   </tr>
 
 	   <tr>
-		<td> Introduction to Domain Adaptation [<a href="https://jianglin954.github.io/files/Domain_Adaptation.pdf">Notes</a>]<br></td>
-	   </tr>
-
-	   <tr>
-		<td> Introduction to Graph Neural Networks [<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Notes</a>]</td>
+		<td>[<a href="">Network Quantization</a>](coming soon)<br></td>
+		<td>[<a href="">Vision-Language-Action Models</a>](coming soon)<br></td>
 	   </tr>
 	</tbody>
 	</table>					
@@ -441,6 +441,7 @@ var _hmt = _hmt || [];
   </div>
 
 </body></html>
+
 
 
 
