--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ var _hmt = _hmt || [];
 
 		<tr>
 			<td><strong><a href="" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
-				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="">Code</a>](coming soon)<br>
+				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
 			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
 		</tr>
@@ -393,52 +393,52 @@ var _hmt = _hmt || [];
 	</table>
 
 
-     <h2>Personal Links </h2>
-
+	<h2>Personal Links </h2>
+	
 	<table id="tbPublications" width="100%">
-	<tbody>		 
+		<tbody>		 
+			<tr>
+			<td>Awesome Papers in Machine Learning, Computer Vision, Pattern Recognition, and Data Mining
+				[<a href="https://github.com/Jianglin954/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM">Link</a>]<br></td>
+			</tr>
+		</tbody>
+	</table>
 
+	<table style="width:100%; text-align:center; margin-top:8px;">
 		<tr>
-		<td>Awesome Papers in Machine Learning, Computer Vision, Pattern Recognition, and Data Mining
-			[<a href="https://github.com/Jianglin954/Awesome-papers-in-the-fileds-of-CV-ML-PR-DM">Link</a>]<br></td>
+		  <td><a href="https://jianglin954.github.io/files/Visual_Language_Models.pdf">Vision–Language Models</a></td>
+		  <td><a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Graph Neural Networks</a></td>
+		  <td><a href="https://jianglin954.github.io/files/Learning_with_Noisy_Labels.pdf">Learning with Noisy Labels</a></td>
 		</tr>
-
-	   <tr>
-		<td>[<a href="https://jianglin954.github.io/files/Visual_Language_Models.pdf">Vision Language Models</a>]<br></td>
-	    <td>[<a href="https://jianglin954.github.io/files/Domain_Adaptation.pdf">Domain Adaptation</a>]<br></td>
-		<td>[<a href="https://jianglin954.github.io/files/Graph_Neural_Network.pdf">Graph Neural Networks</a>]</td>
-		<td>[<a href="https://jianglin954.github.io/files/Learning_with_Noisy_Labels.pdf">Learning_with_Noisy_Labels</a>]</td>
-	   </tr>
-
-	   <tr>
-		<td>[<a href="">Network Quantization</a>](coming soon)<br></td>
-		<td>[<a href="">Vision-Language-Action Models</a>](coming soon)<br></td>
-	   </tr>
-	</tbody>
-	</table>					
+		<tr>
+		  <td><a href="https://jianglin954.github.io/files/Domain_Adaptation.pdf">Domain Adaptation</a></td>
+		  <td>Network Quantization <span style="color:#888;">(coming soon)</span></td>
+		  <td>Vision–Language–Action Models <span style="color:#888;">(coming soon)</span></td>
+		  <td></td>
+		  <td></td>
+		</tr>
+	</table>
+	  
 
 
-
+	<!-- 
 	<script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5s98u118kjk&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
+	-->
 
 
-	<div id="footer">
-		<div align="center" style="margin:auto;padding-top:10px">
-		<br>
-		&copy; Jianglin Lu | <span>Last updated: Nov 01, 2023</span>
-		</div>
-	</div>
 			
-	<div style="display:none">
+	<div>
 		<h2 id="flag2"> </h2> 
 		<a href="https://info.flagcounter.com/bXN6"><img src="https://s05.flagcounter.com/count2/bXN6/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 	</div>	
 			
-
-			
-
-
-  </div>
+	<div id="footer">
+		<div align="center" style="margin:auto;padding-top:10px">
+		<br>
+		&copy; Jianglin Lu | <span>Last updated: Feb 01, 2026</span>
+		</div>
+	</div>
+		
 
 </body></html>
 
