--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ var _hmt = _hmt || [];
 
 
 			
-	<div>
+	<div style="visibility:hidden; height:0;">
 		<h2 id="flag2"> </h2> 
 		<a href="https://info.flagcounter.com/bXN6"><img src="https://s05.flagcounter.com/count2/bXN6/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 	</div>	
@@ -441,6 +441,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
