--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var _hmt = _hmt || [];
 </script>
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Jianglin Lu-卢江林</title>
+	<title>Jianglin Lu-盧江林</title>
         <link rel="shortcut icon" href="img/jianglin.png"/>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="keywords" content="Jianglin Lu, Northeastern University">
@@ -440,3 +440,4 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
