--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis.</a></strong>
+			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis for Multimodal Alignment.</a></strong>
 				[<a href="https://openreview.net/pdf?id=D2NR5Zq6PG">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
@@ -438,5 +438,6 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
