--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ var _hmt = _hmt || [];
 			</td>
 			-->
 			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis for Multimodal Alignment.</a></strong>
-				[<a href="https://openreview.net/pdf?id=D2NR5Zq6PG">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
+				[<a href="https://openreview.net/forum?id=D2NR5Zq6PG">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
 		</tr>
@@ -438,6 +438,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
