--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@ var _hmt = _hmt || [];
 	<table id="tbPublications" width="100%">
 	<tbody>
 		<tr>
+			<td><strong><a href="" target="_blank">Ref-Adv: Exploring MLLM Visual Reasoning in Referring Expression Tasks.</a></strong>
+				[<a href="https://openreview.net/forum?id=iEBgrepR9i">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
+			<p >Qihua Dong, Yang Kuo, Ju Lin, Handong Zhao, Yitian Zhang, Yizhou Wang, Huimin Zeng, <strong>Jianglin Lu</strong>, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
+		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		
+		<tr>
 			<td><strong><a href="" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
 				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
 			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
@@ -438,6 +449,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
