--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ var _hmt = _hmt || [];
 		
 		<tr>
 			<td><strong><a href="" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
-				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
+				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="https://github.com/Jianglin954/QCQC">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
 		</tr>
@@ -449,6 +449,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
